[tool.poetry]
name = "telegram-api-wrapper"
version = "0.1.0"
description = ""
authors = ["omer bental <ombental@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
ruff = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
