[tool.poetry]
name = "telegram-api-wrapper"
version = "0.1.0"
description = ""
authors = ["omer bental <ombental@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_api_wrapper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
boto3 = "^1.35.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
